<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MyHeartTest</string>
    <string name="start_test">START TEST</string>
    <string name="your_name">Your name</string>
    <string name="your_name_hint">Your name</string>
    <string name="logo">Logo</string>
    <string name="i_am">I am</string>
    <string name="my_heart">My heart</string>
    <string name="my_heart_monitoring">My heart monitoring</string>
    <string name="a_man">A man</string>
    <string name="_1" translatable="false">1</string>
    <string name="i_am_question">I am:</string>
    <string name="a_woman">A woman</string>
    <string name="do_you_have_a_heart_problem">Do you have a heart problem?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="_2" translatable="false">2</string>
    <string name="do_you_have_a_cholesterol_problem">Do you have a cholesterol problem?</string>
    <string name="_3" translatable="false">3</string>
    <string name="are_you_diabetic">Are you diabetic?</string>
    <!--<string name="_2" translatable="false">2</string>-->
    <string name="how_old_are_you">How old are you?</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="less_than_40_years_old">Less than 40 years old</string>
    <string name="between_40_and_60_years_old">Between 40 and 60 years old</string>
    <string name="more_than_60_years_old">More than 60 years old</string>
    <string name="_4" translatable="false">4</string>
    <string name="do_you_have_high_blood_pressure">Do you have high blood pressure?</string>
    <string name="_5" translatable="false">5</string>
    <string name="do_you_have_a_first_degree_relative_father_mother_brother_or_sister_who_had_heart_problems_heart_attack_stroke_sudden_death_before_age_55_for_a_man_or_before_age_65_for_a_woman">Do you have a first-degree relative (father, mother, brother or sister) who had heart problems (heart attack, stroke, sudden death) before age 55 for a man or before age 65 for a woman?</string>
    <string name="_6" translatable="false">6</string>
    <string name="do_you_know_your_body_mass_index_bmi">Do you know your body mass index (BMI)?</string>
    <string name="have_you_already_reviewed_your_cardiovascular_risk_with_your_doctor">Have you already reviewed your cardiovascular risk with your doctor?</string>
    <string name="have_you_ever_had_a_heart_checkup">Have you ever had a heart checkup?</string>
    <string name="have_you_ever_seen_a_cardiologist">Have you ever seen a cardiologist?</string>
    <string name="error_enter_name">You must enter your name to start the test.</string>
    <string name="_45" translatable="false">45</string>
    <string name="error_next_step">You must answer all questions.</string>
    <string name="finish_test">Finish test</string>
    <string name="yes_there_is_someone">If yes, switch on the button</string>
    <string name="Poids_insuffisant">Underweight (BMI &lt;18.5)</string>
    <string name="Poids_normal">Normal weight (18,5 &lt; BMI &lt; 24,9)</string>
    <string name="Embonpoint">Overweight (30,0 &lt; BMI &lt; 34,9)</string>
    <string name="Obesite_classe_I">Obesity class I (30,0 &lt; BMI &lt; 34,9)</string>
    <string name="Obesite_classe_II">Obesity class II(35,0 &lt; BMI &lt;39,9)</string>
    <string name="Obesite_classe_III">Obesity class III (BMI &gt; 40,0)</string>
    <string name="what_do_you_eat_on_a_daily_basis">What do you eat on a daily basis?</string>
    <string name="meat">Meat</string>
    <string name="fruits_and_or_vegetables">Fruits and/or vegetables</string>
    <string name="starchy_foods">Starchy foods</string>
    <string name="legumes">Legumes</string>
    <string name="cakes_and_or_sweets">Cakes and/or sweets</string>
    <string name="Default_value">Select your BMI category</string>
    <string name="_1_or_less">1 or less</string>
    <string name="between_2_and_4">Between 2 and 4</string>
    <string name="more_than_4">More than 4</string>
    <string name="how_many_meals_do_you_eat_per_day">What meals do you eat during the day?</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="diner">Diner</string>
    <string name="snacking">Snacking</string>
    <string name="go_to_site">GO TO SITE</string>
    <string name="quit">QUIT</string>
    <string name="test_results">Test Results</string>
    <string name="my_heart_advice">My Heart advice:</string>
    <string name="textview">TextView</string>
    <string name="my_heart_monitoring_advice_advice">My Heart monitoring advice advice:</string>
    <string name="my_habit_diet">My habit diet:</string>
    <string name="this_is_mon_conseil_coeur">This is mon conseil coeur</string>
    <string name="this_is_mon_conseil_monitoring_coeur">This is mon conseil monitoring coeur</string>
    <string name="my_conseil_habit_diet">My conseil habit diet</string>
    <string name="test_answers">Test Answers</string>
    <string name="gender">Gender :</string>
    <string name="defaulttext">defaultText</string>
    <string name="age">Age :</string>
    <string name="heart_problems">Heart problems :</string>
    <string name="daily_meals">Daily meals :</string>
    <string name="daily_food">Daily food :</string>
    <string name="heart_check_up">Heart check up :</string>
    <string name="cardiovascular_risk_with_doctor">Cardiovascular risk with doctor :</string>
    <string name="relative_with_heart_problems">Relative with heart problems :</string>
    <string name="cholesterol_problems">Cholesterol problems :</string>
    <string name="diabetic">Diabetic :</string>
    <string name="cardiologist">Cardiologist :</string>
    <string name="high_blood_pressure">High blood pressure :</string>
    <string name="body_mass_index">Body mass index :</string>
    <string name="number_of_different_daily_foods">Number of different daily foods :</string>
    <string name="number_of_daily_meals">Number of daily meals :</string>
</resources>