<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6EDED"
    tools:context=".IAm">

    <TextView
        android:id="@+id/textViewNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/_2"
        android:textColor="#C12222"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupQ1" />

    <LinearLayout
        android:id="@+id/LayoutBarreHaut"
        android:layout_width="356dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewBarreHautIam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/i_am"
            android:textAlignment="center"
            android:textColor="#CA2626"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewBarreHautMyHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_heart"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewBarreHautMyHeartMonito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_heart_monitoring"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/_1"
        android:textColor="#C12222"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutBarreHaut" />

    <TextView
        android:id="@+id/textViewQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/i_am_question"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNumber1"
        app:layout_constraintStart_toEndOf="@+id/textViewNumber1" />

    <TextView
        android:id="@+id/textViewQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/how_old_are_you"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNumber2"
        app:layout_constraintStart_toEndOf="@+id/textViewNumber2" />

    <RadioGroup
        android:id="@+id/RadioGroupQ1"
        android:layout_width="135dp"
        android:layout_height="97dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion1">

        <RadioButton
            android:id="@+id/radioButtonAMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_man"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonAWoman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/a_woman"
            android:textSize="16sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RagioGroupQ2"
        android:layout_width="263dp"
        android:layout_height="148dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion2">

        <RadioButton
            android:id="@+id/radioButtonLess40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/less_than_40_years_old"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton4060"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/between_40_and_60_years_old"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonMore60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_than_60_years_old"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>